--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "standard:fix": "standard --fix",
     "standard:validation": "standard",
-    "start:api": "nodemon api/index.js"
+    "start:api": "nodemon api/index.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -37,20 +39,26 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jest": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "passport": "^0.4.1",
     "passport-cookie": "^1.0.6",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
-    "pg": "^8.2.1"
+    "pg": "^8.2.1",
+    "proxyquire": "^2.1.3",
+    "supertest": "^4.0.2"
   },
   "engines": {
     "node": "^12.16.2"
   },
+  "standard": {
+    "env": "jest"
+  },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run standard:validation",
+      "pre-commit": "npm test && npm run standard:validation",
       "pre-push": "npm run standard:validation"
     }
   }
