--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,7 +8,8 @@
     "standard:validation": "standard",
     "start:api": "nodemon api/index.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch ",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,7 @@
     "jest": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
+    "nanoid": "^3.1.9",
     "passport": "^0.4.1",
     "passport-cookie": "^1.0.6",
     "passport-http": "^0.3.0",
