Update travis file

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --mode production",
     "start": "webpack-dev-server --open --mode development",
     "format": "prettier --write '{*.js,src/**/*.{js,jsx}}'",
-    "lint": "eslint src/ --fix"
+    "lint": "eslint src/ --fix",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
