--- a/Backend/.env_example
+++ b/Backend/.env_example
@@ -1,9 +1,9 @@
-API_PORT=
+PORT=
 JWT_SECRET=
-KNEX_HOST=
-KNEX_USER=
-KNEX_PASSWORD=
-KNEX_DATABASE=
-KNEX_PORT=
-KNEX_CLIENT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
+DB_HOST=
+DB_PORT=
+DB_DIALECT=
 DB_MOTOR=
