--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "test:watch": "jest --watch ",
     "coverage": "jest --coverage",
-    "start" :"node api/index.js"
+    "start": "node api/index.js"
   },
   "repository": {
     "type": "git",
@@ -44,6 +44,7 @@
     "jest": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
+    "mysql2": "^2.1.0",
     "nanoid": "^3.1.9",
     "passport": "^0.4.1",
     "passport-cookie": "^1.0.6",
@@ -51,6 +52,7 @@
     "passport-jwt": "^4.0.0",
     "pg": "^8.2.1",
     "proxyquire": "^2.1.3",
+    "sequelize": "^5.21.11",
     "supertest": "^4.0.2"
   },
   "engines": {
