--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,17 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/leshz/megaCat.git"
+    "url": "git+https://github.com/FernandoTorresL/megaCat.git"
   },
-  "author": "Guiselle Mejía <guissmejia@gmail.com>",
+  "author": "Fernando Torres <fertorresmx@gmail.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/leshz/megaCat/issues"
-  },
-  "homepage": "https://github.com/leshz/megaCat#readme",
+  "url": "https://github.com/FernandoTorresL/megaCat/issues",
+  "homepage": "https://github.com/FernandoTorresL/megaCat#readme",
   "dependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.0.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -31,16 +28,20 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/core": "^7.10.1",
+    "@babel/preset-env": "^7.10.1",
+    "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.5",
+    "lint-staged": "^10.2.6",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
@@ -48,5 +49,16 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "npm run format",
+      "npm run lint"
+    ]
   }
 }
