--- a/Frontend/.prettierrc
+++ b/Frontend/.prettierrc
@@ -1,6 +1,6 @@
 {
   "printWidth": 85,
-  "arrowParents": "always",
+  "arrowParens": "always",
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true
