--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "format": "prettier --write '{*.js,src/**/*.{js,jsx}}'",
-    "lint": "eslint --fix",
+    "lint": "eslint src --fix",
     "start": "webpack-dev-server --open --mode development"
   },
   "repository": {
