--- a/Backend/package.json
+++ b/Backend/package.json
@@ -43,6 +43,7 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto-random-string": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.0.1",
@@ -53,6 +54,7 @@
     "passport-cookie": "^1.0.6",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
+    "pluralize": "^8.0.0",
     "proxyquire": "^2.1.3",
     "sequelize": "^5.21.11",
     "supertest": "^4.0.2"
