--- a/Backend/package.json
+++ b/Backend/package.json
@@ -50,6 +50,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "nanoid": "^3.1.9",
+    "nodemailer": "^6.4.8",
     "passport": "^0.4.1",
     "passport-cookie": "^1.0.6",
     "passport-http": "^0.3.0",
