--- a/Backend/package.json
+++ b/Backend/package.json
@@ -42,6 +42,7 @@
     "@hapi/boom": "^9.1.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto-random-string": "^3.2.0",
     "dotenv": "^8.2.0",
