--- a/Backend/package.json
+++ b/Backend/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.2.5",
+    "jest": "^26.0.1",
     "nodemon": "^2.0.4",
     "standard": "^14.3.4"
   },
