--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/FernandoTorresL/megaCat#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
     "dotenv": "^8.2.0",
     "eslint-config-airbnb": "^18.1.0",
