--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,7 +23,6 @@
   "dependencies": {
     "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
-    "dotenv": "^8.2.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -44,6 +43,7 @@
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
+    "dotenv-webpack": "^1.8.0",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-loader": "^4.0.2",
